force-app/main/default/objects/child1__c/child1__c.object-meta.xml
<CustomObject>
    <label>child1</label>
    <nameField>
        <label>child1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>child1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>