force-app/main/default/objects/child1__c/fields/companyName__c.field-meta.xml
<CustomField>
    <fullName>companyName__c</fullName>
    <label>companyName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>