force-app/main/default/objects/child1__c/fields/junctionObj__c.field-meta.xml
<CustomField>
    <fullName>junctionObj__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>junctionObj</label>
    <referenceTo>junctionObj__c</referenceTo>
    <relationshipLabel>child1s</relationshipLabel>
    <relationshipName>child1s</relationshipName>
    <type>Lookup</type>
</CustomField>