force-app/main/default/objects/child1__c/fields/Natonality__c.field-meta.xml
<CustomField>
    <fullName>Natonality__c</fullName>
    <label>Natonality</label>
    <type>TextArea</type>
</CustomField>