force-app/main/default/objects/child1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>companyName__c</columns>
    <columns>EmailId__c</columns>
    <columns>isProduct__c</columns>
    <columns>Establishment__c</columns>
    <columns>junctionObj__c</columns>
    <columns>Natonality__c</columns>
    <columns>phonenumber__c</columns>
    <columns>Profit__c</columns>
    <columns>servicetype__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>